--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,3 @@
-[user]
- path = .localrc/gitconfig
 [color]
  diff = auto
  status = auto
@@ -27,7 +25,7 @@
  last = cat-file commit HEAD
 [merge]
  stat = true
-[github]
- path = .localrc/gitconfig
 [init]
  templatedir = ~/.git_template
+[include]
+ path = .localrc/.gitconfig
