update based on prelude, emacs updates

--- a/.gitconfig
+++ b/.gitconfig
@@ -23,6 +23,7 @@
  excludesfile = /Users/zeeshanlakhani/.gitignore
 [alias]
  last = cat-file commit HEAD
+ lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
 [merge]
  stat = true
 [init]
