--- a/.gitconfig
+++ b/.gitconfig
@@ -19,7 +19,7 @@
  changed = green
  untracked = cyan
 [core]
- editor = /usr/bin/mg
+ editor = /usr/bin/mg -n
  excludesfile = /Users/zeeshanlakhani/.gitignore_global
  autocrlf = input
 [alias]
